labs/lab4/testsuite/good/shadow.hs
one x = 2 ;

main = print ((\one -> one) 1) ;
